sprint_5/etl-stack-packaged.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Lambda ETL function with S3 event trigger for processing CSV files loading
  into a Redshift database in a VPC which is linked to Grafana in an EC2 instance.
Parameters:
  TeamName:
    Type: String
    Description: Shared team Redshift settings
    Default: brews-brothers
  NetworkStackName:
    Type: String
    Default: project-networking
    Description: Network stack with VPC containing Redshift instance
  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
    Description: Automatically look up the latest AMI for Amazon Linux v2
  EC2InstanceProfileRoleName:
    Type: String
    Description: Name of the IAM Instance Profile to attach to the EC2 instance
    Default: de-academy-ec2-role-instance-profile
  EC2InstanceIngressIp:
    Type: String
    Description: IP address range that can SSH / HTTP into the EC2 (e.g., your laptop
      IP)
  EC2UserData:
    Type: String
    Description: Base64-encoded UserData script for launching Grafana
    Default: ''
Resources:
  EtlLambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName:
        Fn::Sub: ${TeamName}-etl-lambda
      Runtime: python3.12
      Handler: super_cafe_etl_lambda.lambda_handler
      Role:
        Fn::Sub: arn:aws:iam::${AWS::AccountId}:role/lambda-execution-role
      Timeout: 30
      ReservedConcurrentExecutions: 10
      Code:
        S3Bucket: brews-brothers-deployment-bucket
        S3Key: 518d0ff07f51eb78ec4ad2af0da6fae0
      VpcConfig:
        SecurityGroupIds:
        - Ref: AWS::NoValue
        SubnetIds:
        - Ref: AWS::NoValue
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${TeamName}-etl-lambda
      Environment:
        Variables:
          SSM_PARAMETER_NAME:
            Fn::Join:
            - _
            - Fn::Split:
              - '-'
              - Fn::Sub: ${TeamName}_redshift_settings
  RawDataBucket:
    Type: AWS::S3::Bucket
    DependsOn:
    - EtlLambdaFunction
    - RawDataBucketPermission
    Properties:
      BucketName:
        Fn::Sub: ${TeamName}-raw-data
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      NotificationConfiguration:
        LambdaConfigurations:
        - Event: s3:ObjectCreated:*
          Function:
            Fn::GetAtt:
            - EtlLambdaFunction
            - Arn
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${TeamName}-raw-data
  RawDataBucketPermission:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Ref: EtlLambdaFunction
      Principal: s3.amazonaws.com
      SourceArn:
        Fn::Sub: arn:aws:s3:::${TeamName}-raw-data
  RawDataBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket:
        Ref: RawDataBucket
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Sid: AllowSSLRequestsOnly
          Action: s3:*
          Principal: '*'
          Effect: Deny
          Resource:
          - Fn::Sub: arn:aws:s3:::${TeamName}-raw-data
          - Fn::Sub: arn:aws:s3:::${TeamName}-raw-data/*
          Condition:
            Bool:
              aws:SecureTransport: 'false'
        - Sid: AllowLambdaToRead
          Action: s3:GetObject
          Principal:
            AWS:
              Fn::Sub: arn:aws:iam::${AWS::AccountId}:role/lambda-execution-role
          Effect: Allow
          Resource:
            Fn::Sub: arn:aws:s3:::${TeamName}-raw-data/*
  GrafanaEc2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId:
        Ref: LatestAmiId
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${TeamName}-ec2-grafana
      NetworkInterfaces:
      - AssociatePublicIpAddress: true
        DeviceIndex: '0'
        SubnetId:
          Fn::ImportValue:
            Fn::Sub: ${NetworkStackName}-PublicSubnet0ID
        GroupSet:
        - Fn::ImportValue:
            Fn::Sub: ${NetworkStackName}-VPCSGID
        - Fn::GetAtt: GrafanaEC2InstanceSecurityGroup.GroupId
      LaunchTemplate:
        LaunchTemplateId:
          Ref: GrafanaEC2LaunchTemplate
        Version:
          Fn::GetAtt:
          - GrafanaEC2LaunchTemplate
          - LatestVersionNumber
  GrafanaEC2LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName:
        Fn::Sub: ${TeamName}-ec2-launch-template
      VersionDescription: '01'
      LaunchTemplateData:
        UserData:
          Ref: EC2UserData
        IamInstanceProfile:
          Name:
            Ref: EC2InstanceProfileRoleName
        MetadataOptions:
          HttpEndpoint: enabled
          HttpProtocolIpv6: disabled
          HttpPutResponseHopLimit: 10
          HttpTokens: optional
          InstanceMetadataTags: enabled
        Monitoring:
          Enabled: true
        BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp3
            VolumeSize: 8
            Encrypted: true
            DeleteOnTermination: true
  GrafanaEC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Sets ingress and egress rules for HTTP, HTTPS and SSH
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${TeamName}-ec2-grafana
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackName}-VPCID
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp:
          Fn::Sub: ${EC2InstanceIngressIp}/32
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp:
          Fn::Sub: ${EC2InstanceIngressIp}/32
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
