sprint_5/etl-stack.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Lambda ETL function with S3 event trigger for processing CSV files loading into a Redshift database in a VPC which is linked to Grafana in an EC2 instance. 


Parameters:
  TeamName:
    Type: String
    Description: Shared team Redshift settings
    Default: brews-brothers

  NetworkStackName:
    Type: String
    Default: project-networking
    Description: Network stack with VPC containing Redshift instance

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
    Description: Automatically look up the latest AMI for Amazon Linux v2

  EC2InstanceProfileRoleName:
    Type: String
    Description: Name of the IAM Instance Profile to attach to the EC2 instance
    Default: de-academy-ec2-role-instance-profile

  EC2InstanceIngressIp:
    Type: String
    Description: IP address range that can SSH / HTTP into the EC2 (e.g., your laptop IP)

  EC2UserData:
    Type: String
    Description: Base64-encoded UserData script for launching Grafana
    Default: '' # If you want you can leave it empty here and pass it later

Resources:
  EtlLambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: !Sub '${TeamName}-etl-lambda'
      Runtime: python3.12
      Handler: super_cafe_etl_lambda.lambda_handler
      Role: !Sub 'arn:aws:iam::${AWS::AccountId}:role/lambda-execution-role'
      Timeout: 30
      ReservedConcurrentExecutions: 10
      Code: ./src
      VpcConfig:
        SecurityGroupIds:
          - !Ref 'AWS::NoValue'
        SubnetIds:
          - !Ref 'AWS::NoValue'
      Tags:
        - Key: Name
          Value: !Sub '${TeamName}-etl-lambda'
      Environment:
        Variables:
          SSM_PARAMETER_NAME:
            Fn::Join:
            - '_'
            - Fn::Split:
              - '-'
              - !Sub '${TeamName}_redshift_settings'


  RawDataBucket:
    Type: AWS::S3::Bucket
    DependsOn:
      - EtlLambdaFunction
      - RawDataBucketPermission
    Properties:
      BucketName: !Sub '${TeamName}-raw-data'
      PublicAccessBlockConfiguration:
        BlockPublicAcls: True
        BlockPublicPolicy: True
        IgnorePublicAcls: True
        RestrictPublicBuckets: True
      NotificationConfiguration:
        LambdaConfigurations:
          - Event: s3:ObjectCreated:*
            Function: !GetAtt EtlLambdaFunction.Arn
      Tags:
        - Key: Name
          Value: !Sub '${TeamName}-raw-data'

  RawDataBucketPermission:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName: !Ref EtlLambdaFunction
      Principal: s3.amazonaws.com
      SourceArn: !Sub 'arn:aws:s3:::${TeamName}-raw-data'

  RawDataBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref RawDataBucket
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Sid: "AllowSSLRequestsOnly"
            Action: "s3:*"
            Principal: "*"
            Effect: "Deny"
            Resource:
              - !Sub "arn:aws:s3:::${TeamName}-raw-data"
              - !Sub "arn:aws:s3:::${TeamName}-raw-data/*"
            Condition:
              Bool:
                aws:SecureTransport: "false"
          - Sid: "AllowLambdaToRead"
            Action: "s3:GetObject"
            Principal:
              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:role/lambda-execution-role"
            Effect: "Allow"
            Resource: !Sub "arn:aws:s3:::${TeamName}-raw-data/*"

  GrafanaEc2Instance:
    Type: AWS::EC2::Instance
    Properties: 
      InstanceType: t2.micro # A small & cheap type of EC2
      ImageId: !Ref LatestAmiId # Reference the special Parameter
      Tags:
        - Key: Name
          Value: !Sub '${TeamName}-ec2-grafana'
      NetworkInterfaces: # networking so we can see redshift
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          SubnetId:
            Fn::ImportValue:
              !Sub '${NetworkStackName}-PublicSubnet0ID'
          GroupSet: # Security groups so we can see RedShift
            - Fn::ImportValue: !Sub '${NetworkStackName}-VPCSGID'
            - Fn::GetAtt: GrafanaEC2InstanceSecurityGroup.GroupId
      LaunchTemplate: # other ec2 configurations
        LaunchTemplateId: !Ref GrafanaEC2LaunchTemplate
        # Make CF replace the ec2 if the launch template changes
        # ... this has pros and cons...
        Version: !GetAtt GrafanaEC2LaunchTemplate.LatestVersionNumber
            

  GrafanaEC2LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub '${TeamName}-ec2-launch-template'
      VersionDescription: '01' # Just changing this will make CF replace your EC2
      LaunchTemplateData:
        UserData: !Ref EC2UserData # pull in the userdata file contents
        IamInstanceProfile:
          Name: !Ref EC2InstanceProfileRoleName # sets up the Instance Profile for Security
        MetadataOptions: # Options for what other AWS services we can use
          HttpEndpoint: enabled
          HttpProtocolIpv6: disabled
          HttpPutResponseHopLimit: 10
          # Make IMDSv2 (Metadata Service v2) optional until all Grafana plugins support it.
          HttpTokens: optional
          InstanceMetadataTags: enabled
        Monitoring:
          Enabled: True # Turn on extra Cloudwatch monitoring
        BlockDeviceMappings: # the hard disk
          - DeviceName: /dev/xvda
            Ebs:
              VolumeType: gp3
              VolumeSize: 8
              Encrypted: true
              DeleteOnTermination: true

  # so we can control access
  GrafanaEC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Sets ingress and egress rules for HTTP, HTTPS and SSH
      Tags:
        - Key: Name
          Value: !Sub '${TeamName}-ec2-grafana'
      VpcId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-VPCID'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Sub '${EC2InstanceIngressIp}/32' # Only our own laptops
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress: # Allow HTTP and HTTPS back out to us (http) and AWS (https)
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Sub '${EC2InstanceIngressIp}/32' # Only our own laptops
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
